# gamemod

openra/: CMakeLists.txt
openra/docker/: Dockerfile
openra/src/: CMakeLists.txt  make-deb  make_deb
openra/src/maps/: CMakeLists.txt
openra/src/maps/cnc/: CMakeLists.txt
openra/src/maps/cnc/the_crater/: CMakeLists.txt  README.md  map.yaml
openra/src/maps/ra/: CMakeLists.txt
openra/src/maps/ra/big_naval/: CMakeLists.txt  README.md  map.yaml
openra/src/maps/ra/hilbert_swamp/: CMakeLists.txt  README.md  generate.py  map.yaml  rules.yaml  sequences.yaml  swamp.lua  voices.yaml  weapons.yaml
openra/src/maps/ra/jolly_roger/: CMakeLists.txt  README.md  map.yaml  roger.lua  rules.yaml  sequences.yaml  weapons.yaml
openra/src/maps/ra/nooblar/: CMakeLists.txt  README.md  map.yaml  nooblar.lua  rules.yaml  sequences.yaml  voices.yaml  weapons.yaml
openra/src/maps/ra/volcano/: CMakeLists.txt  README.md  map.yaml  rules.yaml  sequences.yaml  volcano.lua  weapons.yaml
openra/src/maps/ra/water_vortex/: CMakeLists.txt  README.md  map.yaml  rules.yaml  sequences.yaml  weapons.yaml
